@@ -1,5 +1,8 @@
 2021-03-10  Mark Galassi  <mark@galassi.org>
 
+	* plot_ga_output.py (plot_runfile): added a title to each plot
+	window.  Also added saving this plot to a pdf file.
+
 	* plot_ga_output.py: new program which loads the ouput files from
 	GA-poly-max.py and gives a visualization.  At this time it shows
 	two aligned plots of fitness vs. generation and entropy
